--- a/css/style.css
+++ b/css/style.css
@@ -180,6 +180,7 @@ body:hover {
         height: var(--card-phone-height);
         width: 100%;
         overflow-y: scroll;
-        touch-action:pan-y
+        touch-action:pan-y;
+        -webkit-overflow-scrolling: touch;
     }
 }
