--- a/css/style.css
+++ b/css/style.css
@@ -163,7 +163,10 @@ body:hover {
 
 @media only screen and (max-width: 576px) {
     body{
-        overflow: hidden;
+        overflow: scroll;
+    }
+    #area-wrapper{
+        display:fixed;
     }
     .card-container {
         width: calc(var(--card-phone-width) + 2 * var(--choice-height));
